--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "chart.js": "^2.6.0",
+        "dragula": "^3.7.2",
         "element-ui": "^1.0.7",
         "vue-resource": "^1.0.3"
     }
