--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
+        "browser-sync": "^2.18.13",
+        "browser-sync-webpack-plugin": "^1.2.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
@@ -23,6 +25,7 @@
         "chart.js": "^2.6.0",
         "dragula": "^3.7.2",
         "element-ui": "^1.0.7",
-        "vue-resource": "^1.0.3"
+        "vue-resource": "^1.0.3",
+        "vue-router": "^3.0.1"
     }
 }
