cleaned up pipeline component, changed dragula to vuedraggable, vue-resource to axios and finally got update recruit working

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=i53weLzCSdunQzNc2SXR2AE9XJVDuNaq
-APP_URL=http://flarepoint-crm.dev
+APP_URL=http://flarepoint.test
 
 DB_HOST=localhost
 DB_DATABASE=flarepoint
