--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+    "name": "hey-coach",
+    "author": "lancekey",
+    "repository": "gkobilansky/hey-coach",
+    "version": "0.0.2",
+    "description": "heycoach is an athlete recruiting tool",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -10,7 +15,6 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
         "browser-sync": "^2.18.13",
         "browser-sync-webpack-plugin": "^1.2.0",
@@ -22,10 +26,10 @@
         "vue-template-compiler": "^2.5.6"
     },
     "dependencies": {
+        "axios": "^0.17.1",
         "chart.js": "^2.6.0",
-        "dragula": "^3.7.2",
         "element-ui": "^1.0.7",
-        "vue-resource": "^1.0.3",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "vuedraggable": "^2.16.0"
     }
 }
