--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "chart.js": "^2.6.0",
         "element-ui": "^1.0.7",
         "vue-router": "^3.0.1",
-        "vuedraggable": "^2.16.0"
+        "vuedraggable": "^2.16.0",
+        "vuex": "^3.0.1",
+        "vuex-persistedstate": "^2.5.2"
     }
 }
