--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,13 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "laravel/homestead": "^7.3"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/helper_functions.php"
+        ],
         "classmap": [
             "database"
         ],
